--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <meta charset="UTF-8">
 <meta name="description" content="I made this website at school bc I wanted to play games">
 <meta name="keywords" content="Games,nintendoboi2,github.io,nintendoboi22,github website, github game">
+<meta name="updates" content="This site wont receive many updates, go to the new site uhh ya that about it have a good day :)"
 <meta name="author" content="Nintendoboi2">
 <meta name="google-adsense-account" content="ca-pub-8650522196901208">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2812544090272940"
