--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ function formatTime(seconds) {
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/Burrito-Bison" target="_blank">Burrito Bison</a>
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/challenge-the-runners" target="_blank">Challenge The Runners</a>
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/chrome-dino" target="_blank">Chrome Dino</a>
+    <h3 class="game"> <a href="https://nintendoboi222.github.io/games/clickerheros" target="_blank">Clicker Heros</a>
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/cluster-truck" target="_blank">Cluster Truck</a>
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/cookie-clicker" target="_blank">Cookie Clicker</a>
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/craft-mine" target="_blank">Craft Mine</a>
