--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ function formatTime(seconds) {
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/impossiblequiz" target="_blank">Impossible Quiz</a>
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/impossiblequiz-2" target="_blank">Impossible Quiz 2</a>
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/jacksmith" target="_blank">JackSmith</a>
+    <h3 class="game"> <a href="https://nintendoboi222.github.io/games/johnny-upgrade" target="_blank">Johnny Upgrade</a>
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/js-roulette" target="_blank">Javascript Roulette </a>
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/learn-to-fly" target="_blank">Learn To Fly</a>
     <h3 class="game"> <a href="https://nintendoboi222.github.io/games/learn-to-fly-2" target="_blank">Learn To Fly 2</a>
